# actions-cpp-test

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json
.cache/clangd/index/: main.cpp.ABA93D446A6BEB4B.idx  main.cpp.D11C93C74A2F3D2F.idx
.github/workflows/: build-and-release-linux.yml  build-and-release-windows.yml  build-and-release.yml
appimage/: AppRun  app.desktop
src/: main.cpp
